# rust-copter

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  task.py
.cargo/: config.toml
.github/workflows/: docs.yml  first-time-setup.yml  prerelease.yml  release.yml  task.yml  tasks.yml  tools.yml  workspace.yml
common/: Cargo.toml
common/esc/: Cargo.toml
common/invensense-mpu/: Cargo.toml
common/invensense-mpu/src/: i2c.rs  lib.rs  spi.rs
common/motion-sensor/src/: lib.rs  triplet.rs
common/mpu9250-regs/src/: lib.rs  mpu9250.rs
demos/mpu9250/: Cargo.toml
demos/mpu9250-getting-started/: Cargo.toml  hardware-test.sh
demos/mpu9250-getting-started/src/: control.rs  delay.rs  main.rs
demos/mpu9250-i2c/: Cargo.toml
demos/mpu9250-i2c/src/: main.rs
demos/mpu9250-spi/: Cargo.toml
demos/mpu9250-spi/src/: main.rs
demos/mpu9250/src/: main.rs
demos/pwm-control/: Cargo.toml  hardware-test.bat  hardware-test.sh
demos/pwm-control/src/: datapath.rs  main.rs  parser.rs  sensor.rs
docs/: GettingStartedSoftware.md  README.md  first-time-setup.sh
firmware/: Cargo.toml
firmware/demos-teensy4/: Cargo.toml  mpu9250-i2c.rs  mpu9250-spi.rs
firmware/demos-teensy4/pwm-control/: datapath.rs  main.rs  sensor.rs
firmware/demos-teensy4/pwm-control/datapath/: usb.rs
firmware/demos-teensy4/shared/: lib.rs
firmware/demos/mpu9250-i2c/: Cargo.toml
firmware/demos/mpu9250-i2c/src/: main.rs
firmware/demos/mpu9250-spi/: Cargo.toml
firmware/demos/mpu9250-spi/src/: main.rs
firmware/demos/pwm-control/: Cargo.toml
firmware/demos/pwm-control/src/: datapath.rs  main.rs
firmware/esc-imxrt1062/: Cargo.toml
firmware/esc-imxrt1062/src/: lib.rs
host/: Cargo.toml  README.md  dev-requirements.txt  esc-throttle.py  imu-parse.py
host/.cargo/: config.toml
host/pymotion-sensor/: Cargo.toml
host/pymotion-sensor/src/: lib.rs
host/pypwm_control/: __init__.py  imu_stream.py  pwm_control.py
libs/esc/: Cargo.toml
libs/esc-imxrt1062/: Cargo.toml
libs/esc-imxrt1062/src/: lib.rs
libs/esc/src/: lib.rs
libs/invensense-mpu/: Cargo.toml
libs/invensense-mpu/src/: i2c.rs  lib.rs  spi.rs
libs/motion-sensor/: Cargo.toml
libs/motion-sensor/src/: lib.rs  triplet.rs
libs/mpu9250-regs/: Cargo.toml
libs/mpu9250-regs/src/: ak8963.rs  lib.rs  mpu9250.rs
solid-models/motor-test-fixture/: motor_test_fixture.step  motor_test_fixture.stl  readme.md
tools/: README.md  imu-parse.py
tools/pymotion-sensor/: Cargo.toml
tools/pymotion-sensor/src/: lib.rs
