[workspace]
members = [
    "demos/mpu9250-i2c",
    "demos/mpu9250-spi",
    "demos/pwm-control",
    "libs/esc",
    "libs/esc-imxrt1062",
    "libs/invensense-mpu",
    "libs/motion-sensor",
    "libs/mpu9250-regs",
]
exclude = [
    "tools/pymotion-sensor",
]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
