[package]
name = "demo-mpu9250-i2c"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>", "Eric Belski <belski.eric@gmail.com>"]
edition = "2018"
description = "Demonstration of interfacing an MPU9250 with the Teensy 4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
panic-halt = "0.2.0"
motion-sensor = { path = "../../libs/motion-sensor" }
invensense-mpu = { path = "../../libs/invensense-mpu" }

[dependencies.log]
version = "0.4.8"
features = ["release_max_level_debug"]

[dependencies.teensy4-bsp]
git = "https://github.com/mciantyre/teensy4-rs.git"
branch = "development"
