[package]
name = "pymotion-sensor"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"

[lib]
name = "motion_sensor"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.1"
features = ["extension-module"]

[dependencies.motion-sensor]
path = "../../common/motion-sensor"
features = ["use-serde"]

[dependencies.postcard]
version = "0.5"
default-features = false
features = ["use-std"]
