[package]
name = "invensense-mpu"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.motion-sensor]
path = "../motion-sensor"

[dependencies.mpu9250-regs]
path = "../mpu9250-regs"

[dependencies]
embedded-hal = "0.2.4"
log = "0.4.8"