[package]
name = "pymotion-sensor"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"

[lib]
name = "motion_sensor"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.1"
features = ["extension-module"]

[dependencies.motion-sensor]
path = "../../libs/motion-sensor"
features = ["use-serde"]

[dependencies.postcard]
version = "0.5"
default-features = false
features = ["use-std"]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
