[package]
name = "demo-mpu9250-i2c"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>", "Eric Belski <belski.eric@gmail.com>"]
edition = "2018"
description = "Demonstration of interfacing an MPU9250 with the Teensy 4"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.4"
panic-halt = "0.2.0"
motion-sensor = { path = "../../../common/motion-sensor" }
invensense-mpu = { path = "../../../common/invensense-mpu" }

[dependencies.log]
version = "0.4.11"
features = ["release_max_level_debug"]

[dependencies.teensy4-bsp]
version = "0.1"
features = ["rt"]
