[package]
name = "demo-pwm-control"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>", "Eric Belski <belski.eric@gmail.com>"]
edition = "2018"
description = "Demonstrates PWM duty cycle control. Useful for testing PWM outputs."

[dependencies]
panic-halt = "0.2.0"
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.4"
log = { version = "0.4.11", features = ["release_max_level_debug"] }
postcard = { version = "0.5", default-features = false }
void = { version = "1.0.2", default-features = false }
motion-sensor = { path = "../../libs/motion-sensor", features = ["use-serde"] }
invensense-mpu = { path = "../../libs/invensense-mpu" }

[dependencies.teensy4-bsp]
version = "0.1"
features = ["rt"]

[dependencies.esc]
path = "../../libs/esc"

[dependencies.esc-imxrt1062]
path = "../../libs/esc-imxrt1062"
